--- a/home/css/responsive.css
+++ b/home/css/responsive.css
@@ -77,6 +77,7 @@
         display: none;
     }
     .about_us li {
+        text-align: center;
         float: left;
     }
     .map {
@@ -110,6 +111,7 @@
         left: -3px;
     }
     .text-bg p {
+        color: #02246a;
         padding-bottom: 30px;
     }
     .ideas_box p {
@@ -197,6 +199,7 @@
         margin-top: 30px;
     }
     .text-bg {
+        color: #02246a;
         padding-right: 0;
     }
     .text_img figure h3 {
@@ -204,6 +207,7 @@
         left: 5px;
     }
     .text-bg p {
+        color: #02246a;
         padding-bottom: 30px;
     }
     .ideas_box p {
@@ -219,7 +223,7 @@
     }
     .titlepage h2 {
         font-size: 32px;
-        line-height: 40px;
+        line-height: 35px;
     }
     .team .titlepage h3 {
         font-size: 18px;
@@ -246,7 +250,8 @@
         margin-top: 10px;
     }
     .about_us li {
-        float: left;
+        text-align: center;
+        float: center;
     }
     ul.social_icon {
         margin-bottom: 10px;
