--- a/home/js/revolution/fonts/pe-icon-7-stroke/css/pe-icon-7-stroke.css
+++ b/home/js/revolution/fonts/pe-icon-7-stroke/css/pe-icon-7-stroke.css
@@ -102,7 +102,7 @@
 .pe-7s-rocket:before {
 	content: "\e6c3";
 }
-.pe-7s-settings:before {
+.pe-7s-Réglages:before {
 	content: "\e6c4";
 }
 .pe-7s-shield:before {
