--- a/home/css/icomoon.css
+++ b/home/css/icomoon.css
@@ -20,12 +20,12 @@ body {
     
     /* Enable Ligatures ================ */
     letter-spacing: 0;
-    -webkit-font-feature-settings: "liga";
-    -moz-font-feature-settings: "liga=1";
-    -moz-font-feature-settings: "liga";
-    -ms-font-feature-settings: "liga" 1;
-    -o-font-feature-settings: "liga";
-    font-feature-settings: "liga";
+    -webkit-font-feature-Réglages: "liga";
+    -moz-font-feature-Réglages: "liga=1";
+    -moz-font-feature-Réglages: "liga";
+    -ms-font-feature-Réglages: "liga" 1;
+    -o-font-feature-Réglages: "liga";
+    font-feature-Réglages: "liga";
 
     /* Better Font Rendering =========== */
     -webkit-font-smoothing: antialiased;
