--- a/home/js/revolution/css/layers.css
+++ b/home/js/revolution/css/layers.css
@@ -1,6 +1,6 @@
 /*-----------------------------------------------------------------------------
 
--	Revolution Slider 5.0 Layer Style Settings -
+-	Revolution Slider 5.0 Layer Style Réglages -
 
 -----------------------------------------------------------------------------*/
 
